# velumeron

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.conf  left_ptr.conf  welcome_to_velumeron.sh  welcome_to_vutureland.sh
.setup/: hyprland.sh  waybar.sh
.test/: config.json
assets/: colors_gtk.css  colors_hyprland.conf  nerdfont-glyphs.json  velumeron.desktop
assets/fontconfig/: velumeron-ui-fallback.conf
assets/scripts/: apply-app-theme.sh  apply-hyprlock-theme.sh  apply-theme.sh  apply-ui-style.sh  brightness.sh  bt-notify.sh  btop-drop.sh  build-mpv-plugin.sh  caffeine.sh  caldav-client.py  (+33 more)
docs/: ARCHITECTURE.md  dependencies.md  gui.md  hyprland.md  wallpaper.md  wallust.md  waybar.md
fastfetch/: config.jsonc  help.md
gamemode/: gamemode.md
gui/: constants.py  design.py  keybind_help.py  main.py  notify_config.py  notify_daemon.py  notify_popup.py  notify_window.py  osd.py  osd_config.py  panel.py  panel_player.py  settings.py  style.css  ufw_helper.py  ufw_manager.py
hypr/: hypridle.conf  hyprland.conf  hyprlock.conf
hypr.lua/: active-hyprlock.conf  colors.lua  hypridle.conf  hyprland.lua  hyprlock.conf  user_settings.lua
initial-build/: downloads.txt
kitty/: colors.conf  kitty.conf
panel/: launch.sh  svelte.config.js
quickshell/: Colors.qml  Fuzzy.qml  Hyprwindows.qml  SettingsStore.qml  Style.qml  Templates.qml  ThumbQueue.qml  UiState.qml  UserSettings.qml  VtlConfig.qml  WallpaperWindow.qml  Wording.qml  qmldir  shell.qml
quickshell/plugins/mpv/: CMakeLists.txt  MpvVideo.cpp  MpvVideo.h
rofi/: _window-switcher.rasi  active-players.rasi  bluetooth.rasi  clipvault.rasi  hyprlock-switcher.rasi  launcher.rasi  session-menu.rasi  wallpaper-switcher.rasi  window-switcher.rasi
swaync/: config.json  style.css
wallust/: colors.md  wallust.toml
waybar-modular/: colors_gtk.css
(+429 files in other folders)
